# 2D-platformer

./: .gitignore  CMakeLists.txt  README.md  build.bat  generate_files.bat
shaders/: triangle.frag.hlsl  triangle.vert  triangle.vert.hlsl  triangle_color.frag  triangle_data.frag  triangle_data.vert  triangle_transform.vert
src/: asset_manager.cpp  asset_manager.h  assets.cog.h  assets.cpp  assets.h  hash.h  image.cpp  image.h  keyboard_state.h  main.cpp  point.h  quad_draw.h  rect.cpp  rect.h  size.h  util.cpp  util.h  vec.h  view.cpp  view.h  vk_renderer.cpp  vk_renderer.h  window.cpp  window.h
src/renderer/: buffer.cpp  buffer.h  draw.h  initializers.h  material.cpp  material.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  resource_ids.h  shader.cpp  shader.h  texture.cpp  texture.h  tools.cpp  tools.h
src/shader_defs/: shader.h  shader_pairs.cpp  shader_pairs.h  shared.h  triangle_color_frag.h  triangle_data_frag.h  triangle_data_vert.h  triangle_frag.h  triangle_transform_vert.h  triangle_vert.h
src/views/: animatable.h  color_quad_draw.h  controllable_quad_draw.h  data_quad_draw.h  moving_quad_draw.h  quad_draw.h  renderable.h  shared.h  view.cpp  view.h
